fixtures/parser/invalid/strings_invalid.php
<?php
// invalid: double-quoted string is not terminated

$value = "unterminated
